# borse

./: .gitignore  .pre-commit-config.yml  CLAUDE.md  README.md  prek.toml  pyproject.toml
.github/workflows/: release.yml
src/borse/: WORDS.txt  __about__.py  __init__.py  a1z26.py  braille.py  config.py  dialogs.py  discord_ui.py  game.py  main.py  menu.py  migrate.py  modes.py  morse.py  morse_audio.py  progress.py  semaphore.py  settings_ui.py  share_ui.py  words.py
tests/: __init__.py  test_a1z26.py  test_braille.py  test_config.py  test_main.py  test_migrate.py  test_morse.py  test_morse_audio.py  test_progress.py  test_semaphore.py  test_words.py
