[project]
name = "borse"
version = "0.1.0"
description = "A terminal game for practicing Morse code, Braille, and flag semaphore reading"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
borse = "borse.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.environment]
python-version = "3.14"

[dependency-groups]
dev = [
    "prek>=0.3.1",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "ty>=0.0.1a6",
]
