[project]
name = "borse"
version = "0.1.0"
description = "A terminal game for practicing Morse code, Braille, and semaphore."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []
authors = [{ name = "Evan Chen", email = "evan@evanchen.cc" }]
license = { text = "MIT" }
urls = { repository = "https://github.com/vEnhance/borse" }

[project.scripts]
borse = "borse.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.environment]
python-version = "3.14"

[dependency-groups]
dev = [
    "prek>=0.3.1",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "ty>=0.0.1a6",
]
