[project]
name = "borse"
description = "Practice braille, Morse, semaphore."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]
authors = [{ name = "Evan Chen", email = "evan@evanchen.cc" }]
license = { text = "MIT" }
urls = { repository = "https://github.com/vEnhance/borse" }
dynamic = ["version"]

[project.scripts]
borse = "borse.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/borse/__about__.py"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.environment]
python-version = "3.14"

[dependency-groups]
dev = [
    "prek>=0.3.1",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "ty>=0.0.1a6",
]
